# rust-html5-video-looper

./: .gitignore  Cargo.toml  README.md
public/: index.html
src/: main.rs
