[package]
name = "rust-html5-video-looper"
version = "0.1.1"
authors = ["Josh Terrill <joshterrill.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "*"
ws = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["serve"]